jvm speed fine-tuning: new Integer replaced by Integer.valueOf strings += in loops replaced by stringbuilder/buffer append