@@ -2989,7 +2989,7 @@ public class PdfContentByte {
         if (layerDepth == null)
             layerDepth = new ArrayList<Integer>();
         if (layer instanceof PdfLayerMembership) {
-            layerDepth.add(new Integer(1));
+            layerDepth.add(Integer.valueOf(1));
             beginLayer2(layer);
             return;
         }
@@ -3002,7 +3002,7 @@ public class PdfContentByte {
             }
             la = la.getParent();
         }
-        layerDepth.add(new Integer(n));
+        layerDepth.add(Integer.valueOf(n));
     }
 
     private void beginLayer2(PdfOCG layer) {
