@@ -1470,7 +1470,7 @@ public class PdfReader implements PdfViewerPreferences {
                                 objStmToOffset.put(field2, 0);
                             }
                             else {
-                                Integer on = new Integer(field2);
+                                Integer on = Integer.valueOf(field2);
                                 IntHashtable seq = objStmMark.get(on);
                                 if (seq == null) {
                                     seq = new IntHashtable();
@@ -3096,9 +3096,9 @@ public class PdfReader implements PdfViewerPreferences {
                         }
                     }
                     if (objs == null)
-                        state.push(new Object[]{ar, new Integer(k + 1)});
+                        state.push(new Object[]{ar, Integer.valueOf(k + 1)});
                     else {
-                        objs[1] = new Integer(k + 1);
+                        objs[1] = Integer.valueOf(k + 1);
                         state.push(objs);
                     }
                     state.push(v);
@@ -3117,9 +3117,9 @@ public class PdfReader implements PdfViewerPreferences {
                         }
                     }
                     if (objs == null)
-                        state.push(new Object[]{keys, dic, new Integer(k + 1)});
+                        state.push(new Object[]{keys, dic, Integer.valueOf(k + 1)});
                     else {
-                        objs[2] = new Integer(k + 1);
+                        objs[2] = Integer.valueOf(k + 1);
                         state.push(objs);
                     }
                     state.push(v);
