@@ -446,14 +446,14 @@ public class PdfWriter extends DocWriter implements
                 if (first + len == entry.getRefnum())
                     ++len;
                 else {
-                    sections.add(new Integer(first));
-                    sections.add(new Integer(len));
+                    sections.add(Integer.valueOf(first));
+                    sections.add(Integer.valueOf(len));
                     first = entry.getRefnum();
                     len = 1;
                 }
             }
-            sections.add(new Integer(first));
-            sections.add(new Integer(len));
+            sections.add(Integer.valueOf(first));
+            sections.add(Integer.valueOf(len));
             if (writer.isFullCompression()) {
                 int mid = 4;
                 int mask = 0xff000000;
