@@ -837,9 +837,9 @@ public class XfaForm {
                     String s = escapeSom(n2.getLocalName());
                     Integer i = ss.get(s);
                     if (i == null)
-                        i = new Integer(0);
+                        i = Integer.valueOf(0);
                     else
-                        i = new Integer(i.intValue() + 1);
+                        i = Integer.valueOf(i.intValue() + 1);
                     ss.put(s, i);
                     if (hasChildren(n2)) {
                         stack.push(s + "[" + i.toString() + "]");
@@ -969,15 +969,15 @@ public class XfaForm {
                         }
                         Integer i;
                         if (annon) {
-                            i = new Integer(anform);
+                            i = Integer.valueOf(anform);
                             ++anform;
                         }
                         else {
                             i = ss.get(nn);
                             if (i == null)
-                                i = new Integer(0);
+                                i = Integer.valueOf(0);
                             else
-                                i = new Integer(i.intValue() + 1);
+                                i = Integer.valueOf(i.intValue() + 1);
                             ss.put(nn, i);
                         }
                         stack.push(nn + "[" + i.toString() + "]");
@@ -995,9 +995,9 @@ public class XfaForm {
                             String nn = escapeSom(name.getNodeValue());
                             Integer i = ff.get(nn);
                             if (i == null)
-                                i = new Integer(0);
+                                i = Integer.valueOf(0);
                             else
-                                i = new Integer(i.intValue() + 1);
+                                i = Integer.valueOf(i.intValue() + 1);
                             ff.put(nn, i);
                             stack.push(nn + "[" + i.toString() + "]");
                             String unstack = printStack();
